# NLP

./: Dataset.csv  README.md  Rapport_integral_NLP_SetFit_Gradio.docx  SetFit.ipynb  Tutorial_Gradio_Victorien (1).ipynb  config_sentence_transformers.json  knowledge.txt  main.py  modules.json  nlp.ipynb  pyproject.toml  rng_state.pth  scheduler.pt  sentence_bert_config.json  sentiment-analysis.py  tokenizer_config.json  trainer_state.json  tweets_dataset.csv
nlp_ning/data/checkpoints/checkpoint-6/: config.json
nlp_ning/data/checkpoints/checkpoint-6/1_Pooling/: config.json
