[project]
name = "nlp-ning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "gradio>=6.17.3",
    "hf-xet>=1.5.1",
    "ipykernel>=7.2.0",
    "protobuf>=7.35.0",
    "sentencepiece>=0.2.1",
    "setfit>=1.1.3",
    "textblob>=0.20.0",
    "torch>=2.12.0",
    "transformers>=4.41,<5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
